<resources>
    <string name="app_name">MVI-MvRx-Hilt-Kotlin</string>
    <string name="title_explorer">Explore</string>
    <string name="title_movies">Movies</string>
    <string name="title_tv_shows">TV Shows</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="coming_soon_movies">Coming Soon Movies</string>
    <string name="trending_tv_shows">Trending TV Shows</string>
    <string name="popular_tv_shows">Popular TV Shows</string>
    <string name="coming_soon_tv_shows">Coming Soon TV Shows</string>
    <string name="spinner_title">Choose a genre</string>

    <string name="loading_genres">Loading Genres</string>
    <string name="loading_movies">Loading Movies</string>
    <string name="loading">Loading</string>

    <string name="search_hint">Search for a movie, tv show or a person</string>
</resources>